# chatbot-telegram

./: .env-example  DOCUMENTO AUXILIAR DA NOTA FISCAL DE CONSUMIDOR ELETRÔNICA.html  Dockerfile  README.md  README_SELENIUM.md  bot.py  docker-compose.yml  finance_bot.db  finance_bot_sqlalchemy.db  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
DOCUMENTO AUXILIAR DA NOTA FISCAL DE CONSUMIDOR ELETRÔNICA_files/: index.js.faces  jquery.mobile-1.4.5.min.css.faces  jquery.mobile-1.4.5.min.js.faces  js  nfceMob.css.faces  nfceMob_ie.css.faces  saved_resource
src/: bot.py  finance_bot_sqlalchemy.db  photo_handler.py  read_qrcode.py
src/command_menu/: add_command.py  balance_command.py  category_command.py  delete_command.py  edit_command.py  goal_command.py  help_command.py  report_command.py  start_command.py  statement_command.py
src/tools/: database.py  database_old.py
