[project]
name = "chatbot-telegram"
version = "0.1.0"
description = ""
authors = [
    {name = "Fabio Lucas",email = "fabiolucamz@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "telegram (>=0.0.1,<0.0.2)",
    "dotenv (>=0.9.9,<0.10.0)",
    "python-telegram-bot (>=22.6,<23.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
